--- a/styles/index.css
+++ b/styles/index.css
@@ -29,22 +29,32 @@ li {
 
 #header {
     background-color: #006a06;
-    height: 8vh;
+    color: white;
+    height: 6vh;
 }
 
 #nav-bar {
     height: 1vh;
-    padding-top: 3vh;
-    padding-bottom: 4vh;
+    padding-bottom: 3vh;
 }
 
 #logo {
-
+    margin-left: 2vw;
+    margin-right: 55vw;
+    padding-top: 2vh;
 }
 
 .nav-btn {
+    padding-top: 2vh;
+    padding-bottom: 3vh;
+    padding-left: 1vw;
+    margin-right: 1vw;
     height: 1vh;
     width: 2vw;
+}
+
+.nav-btn:hover {
+    background: #004303;
 }
 
 .nav-btn * {
@@ -54,7 +64,6 @@ li {
 
 .flex-container {
     display: flex;
-    justify-content: flex-end;
     gap: 5vw;
 }
 
@@ -62,8 +71,12 @@ li {
     flex: 1;
 }
 
+.ml-auto {
+    margin-left: auto;
+}
+
 #splash-screen {
-    height: 50vh;
+    height: 60vh;
 }
 
 #pages {
@@ -71,6 +84,138 @@ li {
     background: #6c9e61;
 }
 
-#footer {
+#slider-img {
+    margin-left: 0;
+    width: 25vw;
+    height: 30vh;
+    margin-right: 10vw;
 
+    background-color: #004303;
+}
+
+#slider-block {
+    margin-left: 5vw;
+    width: 40vw;
+    height: 30vh;
+    margin-right: 5vw;
+
+    background-color: rgba(255, 255, 255, 0.5);
+
+    color: black;
+}
+
+#slider-title {
+    width: 80%;
+    margin-left: 10%;
+}
+
+#slider-title * {
+    max-width: fit-content;
+    margin-inline: auto;
+
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+
+#slider-text {
+    width: 80%;
+    margin-left: 10%;
+}
+
+#slider-text * {
+    max-width: fit-content;
+    margin-inline: auto;
+}
+
+#slider-btn {
+    width: 5vw;
+    height: 4vh;
+
+    border-radius: 8px;
+
+    background-color: #004303;
+
+    margin-inline: auto;
+}
+
+#slider-btn * {
+    margin-top: 2vh;
+    padding-top: 1vh;
+
+    max-width: fit-content;
+    margin-inline: auto;
+}
+
+#slider-switch-l {
+    margin-top: 14vh;
+    height: 1vh;
+    margin-left: 3vw;
+
+    z-index: 10;
+}
+
+#slider-switch-r {
+    margin-top: 14vh;
+    height: 1vh;
+    margin-right: 3vw;
+
+    z-index: 10;
+}
+
+.info-container {
+    margin-inline: auto;
+    width: 80%;
+    height: 50vh;
+
+    margin-top: 8vh;
+    margin-bottom: 2vh;
+
+    border-radius: 4px;
+}
+
+.info-container-image {
+    width: 30vw;
+}
+
+.info-block {
+    width: 45vw;
+
+    margin-right: 5vw;
+}
+
+.info-block-title * {
+    margin-inline: auto;
+}
+
+.info-block-text * {
+    font-size: 22px;
+}
+
+.black-txt {
+    color: black;
+}
+
+.white-txt {
+    color: white;
+}
+
+.background-l {
+    background-color: #e4dccd;
+}
+
+.background-h {
+    background-color: #006a06;
+}
+
+.background-d {
+    background-color: #004303;
+}
+
+#footer {
+    height: 5vh;
+}
+
+#description {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
