--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,11 @@ li {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 #pg-content {
     background: #fff4ec;
 }
@@ -48,9 +53,10 @@ li {
     padding-top: 2vh;
     padding-bottom: 3vh;
     padding-left: 1vw;
+    padding-right: 1vw;
     margin-right: 1vw;
     height: 1vh;
-    width: 2vw;
+    width: auto;
 }
 
 .nav-btn:hover {
@@ -59,12 +65,14 @@ li {
 
 .nav-btn * {
     height: 1vh;
-    width: 2vw;
+    width: auto;
+
+    text-align: center;
 }
 
 .flex-container {
     display: flex;
-    gap: 5vw;
+    gap: 3vw;
 }
 
 .flex-child {
@@ -76,7 +84,7 @@ li {
 }
 
 #splash-screen {
-    height: 60vh;
+    height: 65vh;
 }
 
 #pages {
@@ -170,7 +178,7 @@ li {
     margin-top: 8vh;
     margin-bottom: 2vh;
 
-    border-radius: 4px;
+    border-radius: 6px;
 }
 
 .info-container-image {
@@ -181,14 +189,21 @@ li {
     width: 45vw;
 
     margin-right: 5vw;
+    margin-left: 5vw;
 }
 
 .info-block-title * {
+    font-size: 30px;
+
     margin-inline: auto;
 }
 
 .info-block-text * {
+    margin-top: 2vh;
+
     font-size: 22px;
+
+    width: 80%;
 }
 
 .black-txt {
@@ -212,7 +227,9 @@ li {
 }
 
 #footer {
-    height: 5vh;
+    height: 6vh;
+
+    padding-left: 3vw;
 }
 
 #description {
