--- a/styles/info.css
+++ b/styles/info.css
@@ -9,3 +9,33 @@
     margin-top: 8vh;
     margin-bottom: 4vh;
 }
+
+#return {
+    background-color: #006a06;
+
+    border-radius: 20px;
+
+    transition: all .5s;
+
+    padding: 1em;
+
+    color: whitesmoke;
+}
+
+#return:hover {
+    background-color: #6c9e61;
+
+    color: black;
+}
+
+#info-desc {
+    padding-top: 8vh;
+
+    margin-top: 3vh;
+
+    border: medium solid;
+    border-top-color: #8f8474;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+}
