--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family: "Berlin Sans FB";
+    font-family: Century Gothic, sans-serif;
 }
 
 p {
@@ -32,16 +32,20 @@ a {
 
 #pg-content {
     background: #fff4ec;
-}
 
-.test {
-    height: 50vh;
+    min-height: 100vh;
 }
 
 #header {
     background-color: #006a06;
     color: white;
     height: 6vh;
+
+    width: 100%;
+
+    position: fixed;
+
+    z-index: 10;
 }
 
 #nav-bar {
@@ -51,15 +55,12 @@ a {
 
 #logo {
     margin-left: 2vw;
-    margin-right: 55vw;
+    margin-right: 70vw;
     padding-top: 2vh;
 }
 
 .nav-btn {
-    padding-top: 2vh;
-    padding-bottom: 3vh;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    padding: 2vh 1vw 3vh;
     margin-right: 1vw;
     height: 1vh;
     width: auto;
@@ -92,7 +93,45 @@ a {
 }
 
 #splash-screen {
-    height: 65vh;
+    height: 90vh;
+    background-image: url("http://localhost:63342/webmaster-2024/resources/splash.jpg");
+    width: 100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#home {
+    margin: 0;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    background: rgba(255, 255, 255, 0.45);
+
+    width: 35%;
+
+    border-radius: 4px;
+}
+
+#home-title {
+    margin-bottom: 2vh;
+    padding-top: 1vh;
+
+    text-align: center;
+
+    font-size: 50px;
+}
+
+#statement {
+    text-align: center;
+
+    font-size: 25px;
+
+    padding-bottom: 1vh;
 }
 
 #pages {
@@ -100,13 +139,23 @@ a {
     background: #6c9e61;
 }
 
-#slider-img {
-    margin-left: 0;
-    width: 25vw;
+#slider-img-space {
+    margin-left: 10vw;
+    width: 40vw;
     height: 30vh;
-    margin-right: 10vw;
+    margin-right: 5vw;
+}
 
-    background-color: #004303;
+#slider-img {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: 100%;
 }
 
 #slider-block {
@@ -124,14 +173,16 @@ a {
     width: 80%;
     margin-left: 10%;
 
-    font-size: 25px;
+    font-size: 35px;
+
+    text-align: center;
 }
 
 #slider-title * {
     max-width: fit-content;
     margin-inline: auto;
 
-    margin-top: 2vh;
+    margin-top: 1.5vh;
     margin-bottom: 2vh;
 }
 
@@ -140,6 +191,10 @@ a {
     margin-left: 10%;
 
     margin-bottom: auto;
+
+    font-size: 20px;
+
+    text-align: center;
 }
 
 #slider-text * {
@@ -175,7 +230,9 @@ a {
 
     font-size: 40px;
 
-    z-index: 10;
+    z-index: 8;
+
+    cursor: pointer;
 }
 
 #slider-switch-r {
@@ -187,13 +244,15 @@ a {
 
     font-size: 40px;
 
-    z-index: 10;
+    z-index: 8;
+
+    cursor: pointer;
 }
 
 .info-container {
     margin-inline: auto;
     width: 80%;
-    height: 50vh;
+    height: auto;
 
     margin-top: 8vh;
     margin-bottom: 2vh;
@@ -202,29 +261,61 @@ a {
 }
 
 .info-container-image {
-    width: 30vw;
+    width: 75%;
+    height: auto;
+
+    margin-right: 0;
+    margin-left: auto;
+
+    overflow: hidden;
+
+    object-fit: cover;
+
+    display: flex;
+    justify-content: center;
+}
+
+.info-container-image * {
+    min-height: 100%;
+
+    margin-left: auto;
+
+    overflow: hidden;
+
+    object-fit: cover;
+
+    text-align: center;
 }
 
 .info-block {
     width: 45vw;
 
-    margin-right: 5vw;
-    margin-left: 5vw;
+    margin: auto 5vw;
 }
 
 .info-block-title * {
-    font-size: 30px;
+    font-size: 40px;
 
     margin-top: 2vh;
     margin-inline: auto;
+
+    text-align: center;
 }
 
 .info-block-text * {
     margin-top: 2vh;
 
-    font-size: 22px;
+    font-size: 25px;
 
     width: 80%;
+
+    margin-inline: auto;
+}
+
+
+.info-block-text {
+    text-align: center;
+
 }
 
 .black-txt {
@@ -236,7 +327,7 @@ a {
 }
 
 .background-l {
-    background-color: #e4dccd;
+    background-color: #d8d3cc;
 }
 
 .background-h {
