--- a/styles/info.css
+++ b/styles/info.css
@@ -6,7 +6,7 @@
 }
 
 #info-title {
-    margin-top: 8vh;
+    padding-top: 8vh;
     margin-bottom: 4vh;
 }
 
@@ -38,4 +38,8 @@
     border-bottom: 0;
     border-left: 0;
     border-right: 0;
+}
+
+#info-text * {
+    margin-bottom: 3vh;
 }
