--- a/styles/info.css
+++ b/styles/info.css
@@ -6,8 +6,16 @@
 }
 
 #info-title {
-    padding-top: 8vh;
-    margin-bottom: 4vh;
+    padding-top: 12vh;
+    margin-bottom: 7vh;
+
+    height: auto;
+
+    font-size: 50px;
+
+    width: 80%;
+
+    margin-inline: auto;
 }
 
 #return {
@@ -15,24 +23,30 @@
 
     border-radius: 20px;
 
-    transition: all .5s;
+    transition: all .5s ease-in-out;
 
     padding: 1em;
 
     color: whitesmoke;
+
+    width: 8%;
+
+    text-align: center;
+
+    margin-bottom: 2vh;
+
+    margin-left: 12%;
 }
 
 #return:hover {
     background-color: #6c9e61;
 
+    scale: 1.1;
+
     color: black;
 }
 
-#info-desc {
-    padding-top: 8vh;
-
-    margin-top: 3vh;
-
+#info-text {
     border: medium solid;
     border-top-color: #8f8474;
     border-bottom: 0;
@@ -40,6 +54,18 @@
     border-right: 0;
 }
 
+#info-desc {
+    padding-top: 4vh;
+}
+
+#info-desc * {
+
+}
+
 #info-text * {
     margin-bottom: 3vh;
+
+    width: 80%;
+
+    margin-inline: auto;
 }
