--- a/styles/index.css
+++ b/styles/index.css
@@ -94,7 +94,7 @@ a {
 
 #splash-screen {
     height: 90vh;
-    background-image: url("http://localhost:63342/webmaster-2024/resources/splash.jpg");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/splash.jpg");
     width: 100%;
     background-attachment: fixed;
     background-position: center;
