--- a/styles/initiatives.css
+++ b/styles/initiatives.css
@@ -53,35 +53,35 @@
 }
 
 #electric-vehicles {
-    background-image: url("http://localhost:63342/webmaster-2024/resources/electricCar.png");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/electricCar.png");
     background-position: center;
 
     opacity: 0.45;
 }
 
 #solar-energy {
-    background-image: url("http://localhost:63342/webmaster-2024/resources/solar.png");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/solar.png");
     background-position: center;
 
     opacity: 0.45;
 }
 
 #insulation {
-    background-image: url("http://localhost:63342/webmaster-2024/resources/window.png");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/window.png");
     background-position: center;
 
     opacity: 0.45;
 }
 
 #household-changes {
-    background-image: url("http://localhost:63342/webmaster-2024/resources/home.png");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/home.png");
     background-position: center;
 
     opacity: 0.45;
 }
 
 #passive-water-heating {
-    background-image: url("http://localhost:63342/webmaster-2024/resources/Yellowstone.png");
+    background-image: url("https://dukky0.github.io/webmaster-2024/resources/Yellowstone.png");
     background-position: center;
 
     opacity: 0.45;
