--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,9 @@ body {
 
     font-family: Century Gothic, sans-serif;
 }
+body * {
+    transition: all 0.25s ease-in-out;
+}
 
 p {
     margin: 0;
@@ -36,54 +39,6 @@ a {
     min-height: 100%;
 }
 
-#header {
-    background-color: #006a06;
-    color: white;
-    height: 6vh;
-
-    width: 100%;
-
-    position: fixed;
-
-    z-index: 10;
-}
-
-#nav-bar {
-    height: 1vh;
-    padding-bottom: 3vh;
-}
-
-#logo {
-    margin-left: 2vw;
-    margin-right: 73vw;
-    padding-top: 2vh;
-}
-
-.nav-btn {
-    padding: 2vh 1vw 3vh;
-    margin-right: 1vw;
-    height: 1vh;
-    width: auto;
-}
-
-.nav-btn:hover {
-    background: #004303;
-
-    transition: background 0.5s;
-}
-
-.nav-btn * {
-    height: 1vh;
-    width: auto;
-
-    text-align: center;
-}
-
-.flex-container {
-    display: flex;
-    gap: 3vw;
-}
-
 .flex-child {
     flex: 1;
 }
@@ -102,185 +57,487 @@ a {
     background-size: cover;
 }
 
-#home {
-    margin: 0;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+@media (width <= 1100px) {
+    .flex-container {
+        display: flex;
+        gap: 4vw;
+    }
 
-    background: rgba(255, 255, 255, 0.85);
+    #header {
+        background-color: #006a06;
+        color: white;
+        height: 6.25vw;
 
-    width: 35%;
-    height: 35%;
+        width: 100%;
 
-    border-radius: 4px;
+        position: fixed;
 
-    transition: all 0.5s ease-in-out;
+        z-index: 10;
+    }
+
+    p {
+        font-size: 1.666vw;
+    }
+
+    #nav-bar {
+        height: 1.042vw;
+        padding-bottom: 3vh;
+    }
+
+    #logo {
+        margin-left: 10vw;
+        margin-right: 50vw;
+        padding-top: 2.084vw;
+    }
+
+    .nav-btn {
+        padding: 2.084vw 1.042vw 3.125vw;
+        margin-right: 5vw;
+        height: 1.042vw;
+        width: 3vw;
+    }
+
+    .nav-btn:hover {
+        background: #004303;
+
+        transition: background 0.5s;
+    }
+
+    .nav-btn * {
+        height: 1.042vw;
+        /*width: auto;*/
+
+        text-align: center;
+    }
+
+    #home {
+        margin: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+
+        background: rgba(255, 255, 255, 0.85);
+
+        width: 35vw;
+        height: 35vw;
+
+        border-radius: 1.5vw;
+
+        transition: all 0.5s ease-in-out;
+    }
+
+    #home:hover {
+        opacity: 0;
+    }
+
+    #home-title {
+        position: absolute;
+        top: 6.5vw;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+
+        margin-bottom: 2vh;
+
+        text-align: center;
+
+        font-size: 6vw;
+    }
+
+    #statement {
+        position: absolute;
+        top: 18vw;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+
+        text-align: center;
+
+        font-size: 3vw;
+
+        padding-bottom: 1vh;
+        margin-top: 2vh;
+    }
+
+    #pages {
+        height: 31vw;
+        background: #6c9e61;
+
+        transition: all 0s;
+    }
+
+    #slider-img-space {
+        margin-left: 4vw;
+        width: 60vw;
+        height: 31vw;
+        margin-right: 3vw;
+
+        transition: all 0s;
+    }
+
+    #slider-img {
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: 100%;
+    }
+
+    #slider-block {
+        margin-left: 5vw;
+        width: 60vw;
+        height: 31vw;
+        margin-right: 3vw;
+
+        background-color: rgba(255, 255, 255, 0.5);
+
+        color: black;
+    }
+
+    #slider-title {
+        width: 80%;
+        margin-left: 10%;
+
+        text-align: center;
+    }
+
+    #slider-title * {
+        max-width: fit-content;
+        margin-inline: auto;
+
+        margin-top: 0.7581vw;
+        margin-bottom: 1.042vw;
+
+        font-size: 3.5vw;
+    }
+
+    #slider-text {
+        width: 90%;
+        margin-left: 5%;
+
+        margin-bottom: auto;
+
+        text-align: center;
+    }
+
+    #slider-text * {
+        max-width: fit-content;
+        margin-inline: auto;
+
+        font-size: 1.85vw;
+    }
+
+    #slider-btn {
+        width: 5vw;
+        height: 4vw;
+
+        border-radius: 8px;
+
+        background-color: #004303;
+
+        margin-inline: auto;
+
+        transition: all 0.5s ease-in-out;
+
+        color: white;
+    }
+
+    #slider-btn:hover {
+        background-color: #4d7850;
+
+        scale: 1.2;
+
+        color: black;
+    }
+
+    #slider-btn * {
+        margin-top: 1vw;
+        padding: 1vw;
+
+        max-width: fit-content;
+        margin-inline: auto;
+    }
+
+    #slider-switch-l {
+        margin-top: 12.5vw;
+        height: 1.042vw;
+        margin-left: 3vw;
+
+        color: aliceblue;
+
+        z-index: 8;
+
+        cursor: pointer;
+    }
+
+    #slider-switch-l * {
+        font-size: 4vw;
+    }
+
+    #slider-switch-r {
+        margin-top: 12.5vw;
+        height: 1.042vw;
+        margin-right: 3vw;
+
+        color: aliceblue;
+
+        z-index: 8;
+
+        cursor: pointer;
+    }
+
+    #slider-switch-r * {
+        font-size: 4vw;
+    }
 }
 
-#home:hover {
-    opacity: 0;
+@media (width >= 1100px) {
+    .flex-container {
+        display: flex;
+        gap: 3vw;
+    }
 
-    width: 35%;
-    height: 15%;
-}
+    #header {
+        background-color: #006a06;
+        color: white;
+        height: 3.125vw;
 
-#home-title {
-    position: absolute;
-    top: 37.5%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+        width: 100%;
 
-    margin-bottom: 2vh;
-    padding-top: 1vh;
+        position: fixed;
 
-    text-align: center;
+        z-index: 10;
+    }
 
-    font-size: 50px;
-}
+    p {
+        font-size: 0.833vw;
+    }
 
-#statement {
-    position: absolute;
-    top: 62.5%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    #nav-bar {
+        height: 0.521vw;
+        padding-bottom: 3vh;
+    }
 
-    text-align: center;
+    #logo {
+        margin-left: 2vw;
+        margin-right: 75vw;
+        padding-top: 1.042vw;
+    }
 
-    font-size: 25px;
+    .nav-btn {
+        padding: 1.042vw 0.521vw 1.563vw;
+        margin-right: 1vw;
+        height: 0.521vw;
+        width: 3vw;
+    }
 
-    padding-bottom: 1vh;
-}
+    .nav-btn:hover {
+        background: #004303;
 
-#pages {
-    height: 30vh;
-    background: #6c9e61;
-}
+        transition: background 0.5s;
+    }
 
-#slider-img-space {
-    margin-left: 10vw;
-    width: 40vw;
-    height: 30vh;
-    margin-right: 5vw;
-}
+    .nav-btn * {
+        height: 0.521vw;
+        /*width: auto;*/
 
-#slider-img {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+        text-align: center;
+    }
 
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: 100%;
-}
+    #home {
+        margin: 0;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
 
-#slider-block {
-    margin-left: 5vw;
-    width: 40vw;
-    height: 30vh;
-    margin-right: 5vw;
+        background: rgba(255, 255, 255, 0.85);
 
-    background-color: rgba(255, 255, 255, 0.5);
+        width: 25%;
+        height: 25%;
 
-    color: black;
-}
+        border-radius: 6px;
 
-#slider-title {
-    width: 80%;
-    margin-left: 10%;
+        transition: all 0.5s ease-in-out;
+    }
 
-    font-size: 35px;
+    #home:hover {
+        opacity: 0;
 
-    text-align: center;
-}
+        width: 25%;
+        height: 22.5%;
+    }
 
-#slider-title * {
-    max-width: fit-content;
-    margin-inline: auto;
+    #home-title {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
 
-    margin-top: 1.5vh;
-    margin-bottom: 2vh;
-}
+        margin-bottom: 2vh;
 
-#slider-text {
-    width: 80%;
-    margin-left: 10%;
+        text-align: center;
 
-    margin-bottom: auto;
+        font-size: 3.125vw;
+    }
 
-    font-size: 20px;
+    #statement {
+        position: absolute;
+        top: 62.5%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
 
-    text-align: center;
-}
+        text-align: center;
 
-#slider-text * {
-    max-width: fit-content;
-    margin-inline: auto;
-}
+        font-size: 1.375vw;
 
-#slider-btn {
-    width: 5vw;
-    height: 4vh;
+        padding-bottom: 1vh;
+        margin-top: 2vh;
+    }
 
-    border-radius: 8px;
+    #pages {
+        height: 15.625vw;
+        background: #6c9e61;
 
-    background-color: #004303;
+        transition: all 0s;
+    }
 
-    margin-inline: auto;
+    #slider-img-space {
+        margin-left: 10vw;
+        width: 40vw;
+        height: 15.625vw;
+        margin-right: 5vw;
 
-    transition: all 0.5s ease-in-out;
+        transition: all 0s;
+    }
 
-    color: white;
-}
+    #slider-img {
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
 
-#slider-btn:hover {
-    background-color: #4d7850;
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: 100%;
+    }
 
-    scale: 1.2;
+    #slider-block {
+        margin-left: 5vw;
+        width: 40vw;
+        height: 15.625vw;
+        margin-right: 5vw;
 
-    color: black;
-}
+        background-color: rgba(255, 255, 255, 0.5);
 
-#slider-btn * {
-    margin-top: 2vh;
-    padding-top: 1vh;
+        color: black;
+    }
 
-    max-width: fit-content;
-    margin-inline: auto;
-}
+    #slider-title {
+        width: 80%;
+        margin-left: 10%;
 
-#slider-switch-l {
-    margin-top: 12vh;
-    height: 1vh;
-    margin-left: 3vw;
+        text-align: center;
+    }
 
-    color: aliceblue;
+    #slider-title * {
+        max-width: fit-content;
+        margin-inline: auto;
 
-    font-size: 40px;
+        margin-top: 0.7581vw;
+        margin-bottom: 1.042vw;
 
-    z-index: 8;
+        font-size: 2vw;
+    }
 
-    cursor: pointer;
-}
+    #slider-text {
+        width: 80%;
+        margin-left: 10%;
 
-#slider-switch-r {
-    margin-top: 12vh;
-    height: 1vh;
-    margin-right: 3vw;
+        margin-bottom: auto;
 
-    color: aliceblue;
+        text-align: center;
+    }
 
-    font-size: 40px;
+    #slider-text * {
+        max-width: fit-content;
+        margin-inline: auto;
 
-    z-index: 8;
+        font-size: 1vw;
+    }
 
-    cursor: pointer;
+    #slider-btn {
+        width: 5vw;
+        height: 2.083vw;
+
+        border-radius: 8px;
+
+        background-color: #004303;
+
+        margin-inline: auto;
+
+        transition: all 0.5s ease-in-out;
+
+        color: white;
+    }
+
+    #slider-btn:hover {
+        background-color: #4d7850;
+
+        scale: 1.2;
+
+        color: black;
+    }
+
+    #slider-btn * {
+        margin-top: 1.042vw;
+        padding: 0.521vw;
+
+        max-width: fit-content;
+        margin-inline: auto;
+    }
+
+    #slider-switch-l {
+        margin-top: 6.25vw;
+        height: 0.521vw;
+        margin-left: 3vw;
+
+        color: aliceblue;
+
+        z-index: 8;
+
+        cursor: pointer;
+    }
+
+    #slider-switch-l * {
+        font-size: 2vw;
+    }
+
+    #slider-switch-r {
+        margin-top: 6.25vw;
+        height: 0.521vw;
+        margin-right: 3vw;
+
+        color: aliceblue;
+
+        z-index: 8;
+
+        cursor: pointer;
+    }
+
+    #slider-switch-r * {
+        font-size: 2vw;
+    }
 }
 
 .info-container {
@@ -328,7 +585,7 @@ a {
 }
 
 .info-block-title * {
-    font-size: 40px;
+    font-size: 2.5rem;
 
     margin-top: 2vh;
     margin-inline: auto;
@@ -339,7 +596,7 @@ a {
 .info-block-text * {
     margin-top: 2vh;
 
-    font-size: 25px;
+    font-size: 1.5625rem;
 
     width: 80%;
 
