--- a/styles/index.css
+++ b/styles/index.css
@@ -94,7 +94,7 @@ a {
         padding: 2.084vw 1.042vw 3.125vw;
         margin-right: 5vw;
         height: 1.042vw;
-        width: 4vw;
+        width: auto;
     }
 
     .nav-btn:hover {
@@ -334,7 +334,7 @@ a {
         padding: 1.042vw 0.521vw 1.563vw;
         margin-right: 1vw;
         height: 0.521vw;
-        width: 3vw;
+        width: auto;
     }
 
     .nav-btn:hover {
